2004-01-05  Gerhard Jaeger <gerhard@gjaeger.de>
	* configure configure.in: added new u12 backend.
	* AUTHORS: added myself as u12 backend author.
	* backend/Makefile.in: added new backend u12.
	* backend/u12.c backend/u12.h backend/u12-scanner.h backend/u12-hwdef.h
	  backend/u12.conf backend/u12-shading.c backend/u12-tpa.c 
	  backend/u12-ccd.c backend/u12-hw.c backend/u12-if.c backend/u12-image.c
	  backend/u12-io.c backend/u12-map.c backend/u12-motor.c:
	  initial checkin.
	* backend/dll.conf: added u12 backend.
	* doc/sane-u12.man: initial checkin.
	* doc/sane.man doc/Makefile.in: added man-page for u12 backend.
	* doc/descriptions/u12.desc: added descitpion for u12 backend.
	* doc/descriptions/unsupported.desc: removed Plustek OpticPro U12, UT12,
	  1212U, Genius Colorpage Vivid III, as they should be supported now.

2004-01-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  backend/gt68xx_gt6801.c doc/sane-gt68xx.man
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES: Fixed a
	  bug in the stop scan function for Plustek U16b. Added support
	  for Genius Vivid4xe.
	* doc/descriptions/unsupported.desc: Added Visioneer 8820 and TCE S450.
	
2003-12-31  Henning Meier-Geinitz <henning@meier-geinitz.de>
	
	* doc/descriptions/unsupported.desc: Added HP and Epson scanners.

2003-12-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/check-usb-chip.c: Added test for Genesys Logic GL841.

2003-12-27  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Updated/added several Medion
	  scanners.
	* backend/as6e.c backend/coolscan.c backend/dll.c backend/ibm.c
	  backend/microtek2.c backend/mustek_scsi_pp.c
	  backend/mustek_usb_high.c backend/mustek_usb_low.c
	  backend/mustek_usb_mid.c backend/nec.c backend/net.c
	  backend/qcam.c backend/ricoh-scsi.c backend/s9036.c
	  backend/sp15c-scsi.h backend/sp15c.c backend/sp15c.h