@@ -1,3 +1,6 @@
+2004-01-07  Oliver Rauch <oliver.rauch@rauch-domain.de>
+	* backend/umax.c: disabled quality calibration for Astra 2200 SU via USB
+
 2004-01-05  Gerhard Jaeger <gerhard@gjaeger.de>
 	* configure configure.in: added new u12 backend.
 	* AUTHORS: added myself as u12 backend author.
